add a few background assets

--- a/index.html
+++ b/index.html
@@ -3,19 +3,19 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/styles.css" type="text/css">
-    <title>D&D Minatures</title>
+    <title>Beholder's Minatures</title>
   </head>
   <body>
     <div class="header">
       <!--Title Logo-->
       <img src="" alt="">
-      <h1></h1>
+      <h1>Beholder's Minatures</h1>
       <img src="" alt="">
       <!-- Nav Buttons -->
       <p>
-        <span><a href="#"></a></span>
-        <span><a href="#"></a></span>
-        <span><a href="#"></a></span>
+        <span><a href="#">test</a></span>
+        <span><a href="#">test</a></span>
+        <span><a href="#">test</a></span>
       </p>
     </div>
     <!-- End of Header -->
@@ -24,25 +24,25 @@
       <!-- Main Image -->
       <img src="" alt="">
       <!-- Desctition info -->
-      <p></p>
-      <p></p>
-      <p></p>
+      <p>tes</p>
+      <p>tes</p>
+      <p>test</p>
       <!-- Table of colors -->
       <table>
         <!-- Table head -->
         <thead>
           <tr>
-            <th></th>
-            <th></th>
-            <th></th>
+            <th>test</th>
+            <th>test</th>
+            <th>test</th>
           </tr>
         </thead>
         <!-- Table Body -->
         <tbody>
           <tr>
-            <td></td>
-            <td></td>
-            <td></td>
+            <td>test</td>
+            <td>test</td>
+            <td>test</td>
           </tr>
         </tbody>
       </table>
