add img and styling to header in css, add hover effect for <a> tags

--- a/index.html
+++ b/index.html
@@ -2,20 +2,21 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <link href="https://fonts.googleapis.com/css?family=Acme|Kumar+One|Metamorphous|Permanent+Marker" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css" type="text/css">
     <title>Beholder's Minatures</title>
   </head>
   <body>
     <div class="header">
       <!--Title Logo-->
-      <img src="" alt="">
+      <img src="img/beholder.png" alt="beholder" class="beholder" id="loading">
       <h1>Beholder's Minatures</h1>
-      <img src="" alt="">
+      <!-- <img src="img/beholder.png" alt="beholder" class="beholder" id="beholder2"> -->
       <!-- Nav Buttons -->
       <p>
-        <span><a href="#">test</a></span>
-        <span><a href="#">test</a></span>
-        <span><a href="#">test</a></span>
+        <span><a href="#" class="hvr-buzz">About</a></span>
+        <span><a href="#" class="hvr-buzz">Reviews</a></span>
+        <span><a href="#" class="hvr-buzz">Buy</a></span>
       </p>
     </div>
     <!-- End of Header -->
