add html restructure, add css styling to .content and .wizard-container

--- a/index.html
+++ b/index.html
@@ -20,10 +20,15 @@
       </p>
     </div>
     <!-- End of Header -->
+    <!-- <div class="pushdown"></div> -->
     <!-- Start of content -->
     <div class="content">
       <!-- Main Image -->
-      <img src="" alt="">
+      <div class="wizard-container">
+        <img src="img/wizard.png" alt="wizard" id="wizard">
+      </div>
+
+
       <!-- Desctition info -->
       <p>tes</p>
       <p>tes</p>
