add product information to p tags in .info-container

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="header">
       <!--Title Logo-->
       <img src="img/beholder.png" alt="beholder" class="beholder" id="loading">
-      <h1>Beholder's Minatures</h1>
+      <h1>Beholder's Miniatures</h1>
       <!-- <img src="img/beholder.png" alt="beholder" class="beholder" id="beholder2"> -->
       <!-- Nav Buttons -->
       <p>
@@ -26,13 +26,16 @@
       <!-- Main Image -->
       <div class="wizard-container">
         <img src="img/wizard.png" alt="wizard" id="wizard">
+        <p>Nazguhl, Wizard of Flame</p>
       </div>
-
-
       <!-- Desctition info -->
-      <p>tes</p>
-      <p>tes</p>
-      <p>test</p>
+      <div class="info-container">
+        <p>Here at Beholder's Miniatures, we hand make miniatures to your exact specs. We can make them out of composite materials, plastics and even certain metals of your choosing!</p>
+        <br>
+        <p>The process starts deep in the dungeons below our headquarter. We have trolls, orcs and dwarfs mining and harvesting the materials for our product. The dwarfs, mine the ore and smelt it into workable materials. The trolls make all of our paints for our miniatures with resources surrounding our office. The Orcs haul and organize all of product and make sure it's kept in proper conditions for manufacturing.</p>
+        <br>
+        <p>Once all of the materials are harvested, they are then moved to are manufacturing facility ran by head goblin engineer Klopz Grugz. It is here that our team of goblins hand craft and paint each miniature.</p>
+      </div>
       <!-- Table of colors -->
       <table>
         <!-- Table head -->
