add order section with dice.jpg, positioned as well

--- a/index.html
+++ b/index.html
@@ -37,30 +37,53 @@
         <p>Once all of the materials are harvested, they are then moved to are manufacturing facility ran by head goblin engineer Klopz Grugz. It is here that our team of goblins hand craft and paint each miniature.</p>
       </div>
       <!-- Table of colors -->
-      <table>
-        <!-- Table head -->
-        <thead>
-          <tr>
-            <th>test</th>
-            <th>test</th>
-            <th>test</th>
-          </tr>
-        </thead>
-        <!-- Table Body -->
-        <tbody>
-          <tr>
-            <td>test</td>
-            <td>test</td>
-            <td>test</td>
-          </tr>
-        </tbody>
-      </table>
-      <!-- order input and button -->
-      <p>
-        <label for=""></label>
-        <input type="number" name="" value="">
-        <button type="button" name="button"></button>
-      </p>
+      <div class="table-container">
+        <table>
+          <!-- Table head -->
+          <thead>
+            <tr>
+              <th>Materials</th>
+              <th>price</th>
+            </tr>
+          </thead>
+          <!-- Table Body -->
+          <tbody>
+            <tr>
+              <td>Composite</td>
+              <td>$10</td>
+            </tr>
+            <tr>
+              <td>Iron</td>
+              <td>$15</td>
+            </tr>
+            <tr>
+              <td>Steel</td>
+              <td>$20</td>
+            </tr>
+            <tr>
+              <td>Brass</td>
+              <td>$30</td>
+            </tr>
+            <tr>
+              <td>Copper</td>
+              <td>$40</td>
+            </tr>
+            <tr>
+              <td>Gold</td>
+              <td>$$$</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+      <div class="order-now">
+        <!-- order input and button -->
+        <p>
+          <label for="number">Quantity</label>
+          <input type="number" name="number" value="">
+        </p>
+        <a href="#"><img src="img/dice3.png" alt="dice"></a>
+        <span id="orderNow">Order Now!</span>
+      </div>
     </div>
     <!-- End of content -->
     <!-- Start of Footer -->
