add gallery with css styling to follow

--- a/index.html
+++ b/index.html
@@ -81,16 +81,20 @@
           <label for="number">Quantity</label>
           <input type="number" name="number" value="">
         </p>
-        <a href="#"><img src="img/dice3.png" alt="dice"></a>
+        <a href="#"><img src="img/dice3.png" alt="dice" class="hvr-pulse-grow"></a>
         <span id="orderNow">Order Now!</span>
       </div>
     </div>
     <!-- End of content -->
     <!-- Start of Footer -->
-    <footer>
-      <div class="gallery">
-
+    <div class"footer group">
+      <div class="gallery group">
+        <img src="img/wizard2.png" alt="wizard2">
+        <img src="img/sword.png" alt="sword">
+        <img src="img/sword2.png" alt="sword2">
+        <img src="img/elf.png" alt="elf">
+        <img src="img/wizard.png" alt="wizard">
       </div>
-    </footer>
+    </div>
   </body>
 </html>
