refactor on index.html and styles.css file

--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
       </p>
     </div>
     <!-- End of Header -->
-    <!-- <div class="pushdown"></div> -->
     <!-- Start of content -->
     <div class="content">
       <!-- Main Image -->
@@ -86,7 +85,7 @@
       </div>
     </div>
     <!-- End of content -->
-    <!-- Start of Footer -->
+    <!-- Start of Footer Gallery -->
     <div class"footer group">
       <div class="gallery group">
         <img src="img/wizard2.png" alt="wizard2">
